--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,62 @@
 body {
  color: white;
- background-color: black;
+ background-color: #161212;
+ font-family: Arial, Helvetica, sans-serif;
+ margin: 10px;
 }
-table {
- 
+.tabl {
+ right: 600px;
+ margin: 0 auto;
+ border-collapse: collapse;
+}
+.sir {
+ background-color: lightgrey;
+}
+.black {
+ color: black;
+}
+td {
+ border-top: 1px solid yellow;
+ padding-top: 5px;
+ padding-bottom: 5px;
+ width: 200px;
+ box-shadow: 0 0 10px rgb(0,0,0,0.5);
+}
+#tutylka {
+ float: left;
+ position: absolute;
+ left: 325px;
+}
+ul {
+ width: 120px;
+ list-style-type: none;
+}
+ul li {
+ padding: 5px 0;
+}
+.jakir {
+ text-decoration: none;
+}
+li:hover {
+  cursor: pointer;
+  color: red;
+  text-shadow: 0 1px 0 rgb(0,0,0,0.5);
+} 
+audio {
+ clear: both;
+ position: fixed;
+ bottom: 0;
+ left: 0;
+}
+h1 {
+ text-align: center;
+}
+aside {
+ float: left;
+ margin-left: 200px;
+ text-align: right;
 }
 header {
- float: left;
+ margin-top: 100px;
+ position: relative;
 }
