--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,77 @@
-body {
- color: white;
- background-color: #161212;
+* {
+ margin: 0;
+ padding: 0;
+ -webkit-box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
- margin: 10px;
 }
-.tabl {
- right: 600px;
+body {
+ background-image: url("../foto/back.jpg");
+ background-repeat: no-repeat;
+ background-size: 100%;
+ margin: 100px auto;
+ width: 900px;
+}
+header {
+ height: 150px;
+ margin: 30px;
+}
+#tutylka {
+ width: 150px;
+ height: 150px;
+ float: left;
+ margin-left: 30px;
+}
+h1 {
+ position: relative;
+ top: 80px;
+ left: 120px;
+ font-size: 50px;
+ 
+}
+audio {
+ clear: both;
+ position: fixed;
+ bottom: 0;
+ left: 0;
+}
+aside {
+ float: left;
+ text-align: right;
+ margin-left: 50px;
+}
+ul li .jakir {
+ text-decoration: none;
+}
+.jakir:hover {
+ color: grey;
+ transition: .0.8s;
+ cursor: pointer;
+ padding: 10px;
+ font-weight: bold;
+ text-shadow: 5px 5px 5px;
+}
+ul {
+ width: 180px;
+ list-style-type: none;
+ text-align: right;
+}
+li {
+ padding: 3px;
+}
+td {
+ border-top: 1px solid #585151;
+ padding-top: 10px;
+ padding-bottom: 2px;
+ width: 200px;
+}
+.table {
+ width: 60%;
+ margin-left: 200px;
  margin: 0 auto;
  border-collapse: collapse;
+ box-shadow: 4px -4px 50px;
 }
 .sir {
  background-color: lightgrey;
@@ -15,48 +79,10 @@ body {
 .black {
  color: black;
 }
-td {
- border-top: 1px solid yellow;
- padding-top: 5px;
- padding-bottom: 5px;
- width: 200px;
- box-shadow: 0 0 10px rgb(0,0,0,0.5);
+nav {
+ margin-top: 20px;
 }
-#tutylka {
- float: left;
- position: absolute;
- left: 325px;
-}
-ul {
- width: 120px;
- list-style-type: none;
-}
-ul li {
- padding: 5px 0;
-}
-.jakir {
- text-decoration: none;
-}
-li:hover {
-  cursor: pointer;
-  color: red;
-  text-shadow: 0 1px 0 rgb(0,0,0,0.5);
-} 
-audio {
- clear: both;
- position: fixed;
- bottom: 0;
- left: 0;
-}
-h1 {
- text-align: center;
-}
-aside {
- float: left;
- margin-left: 200px;
- text-align: right;
-}
-header {
- margin-top: 100px;
- position: relative;
+input, textarea {
+ border-radius: 10px;
+ background-color: lightgrey;
 }
