--- a/css/style.css
+++ b/css/style.css
@@ -8,29 +8,30 @@
  font-weight: bold;
 }
 body {
+ color: white;
  background-image: url("../foto/night.jpg");
  background-repeat: no-repeat;
  background-size: 100%;
  background-attachment: fixed;
- margin: 100px auto;
- width: 900px;
-}
-header {
- height: 150px;
- margin: 30px;
+ margin: 20px 40px;
 }
 #tutylka {
  width: 150px;
- height: 150px;
+ height: 200px;
  float: left;
- margin-left: 50px;
+ border: 2px solid darkgrey;
+ border-radius: 10px;
+ margin: 0 0 100px 50px;
 }
 h1 {
- position: relative;
- top: 80px;
- left: 120px;
- font-size: 50px;
- 
+ margin: 0 auto;
+ text-align: center;
+ font-family: Italic;
+ font-size: 4em;
+}
+h2 {
+ font-family: Italic;
+ font-size: 2em;
 }
 audio {
  clear: both;
@@ -39,45 +40,46 @@ audio {
  left: 0;
 }
 aside {
- float: left;
- text-align: right;
- margin-left: 50px;
- margin-top: 30px;
+ position: fixed;
+ top: 40px;
+ right: 20px;
+}
+ul {
+ list-style-type: none;
+ color: white;
+ width: 175px;
+ text-align: center;
+}
+ul li {
+ font-size: large;
+ padding: 20px 0;
+ text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
 }
 ul li .jakir {
  text-decoration: none;
+ color: grey;
+ -webkit-transition: .3s;
+ -o-transition: .3s;
+ transition: .3s;
 }
 .jakir:hover {
  color: blue;
- transition: .0.8s;
  cursor: pointer;
- padding: 10px;
- font-weight: bold;
- text-shadow: 5px 5px 5px;
-}
-ul {
- width: 180px;
- list-style-type: none;
- text-align: right;
-}
-li {
- padding: 3px;
 }
 td {
  border-top: 1px solid #585151;
  padding-top: 10px;
  padding-bottom: 2px;
- width: 200px;
+ width: 50%;
 }
 .table {
  width: 60%;
- margin-left: 200px;
- margin: 0 auto;
+ margin-left: 35%;
  border-collapse: collapse;
  box-shadow: 6px -6px 30px;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
- border-left: 3px solid black;
+ /*border-left: 3px solid black;*/
 }
 .sir {
  background-color: lightgrey;
@@ -86,10 +88,80 @@ td {
 .black {
  color: black;
 }
-nav {
- margin-top: 30px;
+article {
+ height: 200px;
+ width: 800px;
+ margin: 80px 10% 0; 
+}
+footer {
+ clear: both;
+ text-align: center;
+ margin-top: 40px;
+}
+.input {
+ width: 50%;
+ height: 30px;
+ text-align: center;
+}
+.send {
+ width: 20%;
+ height: 30;
+}
+.buttom:hover {
+ text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
+ cursor: pointer;
+ color: blue;
+}
+textarea {
+ height: 70px;
+ width: 50%
 }
 input, textarea {
  border-radius: 10px;
  background-color: lightgrey;
+}
+ol {
+ list-style-type: none;
+}
+ol li {
+ display: inline-block;
+}
+ol li a {
+ padding-left: 20px;
+ text-decoration: none;
+}
+ol li a:hover {
+ cursor: pointer;
+ width: 100px;
+ height: 100px;
+ text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
+}
+.mova {
+ position: fixed;
+ top: 40px;
+ left: 20px;
+}
+.mova ul {
+ list-style-type: none;
+}
+.mova ul li {
+ display: inline-block;
+ padding-right: 50px;
+}
+.mova ul li a {
+ text-decoration: none;
+ color: grey;
+ -webkit-transition: .3s;
+ -o-transition: .3s;
+ transition: .3s;
+}
+.mova ul li a:hover {
+ color: blue;
+ cursor: pointer;
+}
+span {
+ color: black;
+}
+form {
+ margin-top: 50px;
 }
