--- a/css/style.css
+++ b/css/style.css
@@ -9,25 +9,29 @@
 }
 body {
  color: white;
- background-image: url("../foto/night.jpg");
+ background-image: url("../foto/background.jpg");
  background-repeat: no-repeat;
- background-size: 100%;
+ background-size: 100% 100%;
  background-attachment: fixed;
- margin: 20px 40px;
+ text-align: center;
 }
 #tutylka {
  width: 150px;
  height: 200px;
  float: left;
- border: 2px solid darkgrey;
+ /*border: 2px solid darkgrey;*/
  border-radius: 10px;
- margin: 0 0 100px 50px;
+ filter: grayscale(50%);
+ -webkit-filter: grayscale(75%);
+ -moz-filter: grayscale(75%);
+ -ms-filter: grayscale(75%);
 }
 h1 {
  margin: 0 auto;
  text-align: center;
  font-family: Italic;
  font-size: 4em;
+ clear: both;
 }
 h2 {
  font-family: Italic;
@@ -39,16 +43,18 @@ audio {
  bottom: 0;
  left: 0;
 }
-aside {
+nav {
  position: fixed;
- top: 40px;
- right: 20px;
+ top: 20px;
+ left: 20px;
+ float: left;
+ /*right: 20px;*/
 }
 ul {
  list-style-type: none;
  color: white;
- width: 175px;
- text-align: center;
+ /*width: 175px;*/
+ /*text-align: center;*/
 }
 ul li {
  font-size: large;
@@ -63,7 +69,7 @@ ul li .jakir {
  transition: .3s;
 }
 .jakir:hover {
- color: blue;
+ color: lightblue;
  cursor: pointer;
 }
 td {
@@ -74,12 +80,11 @@ td {
 }
 .table {
  width: 60%;
- margin-left: 35%;
+ margin: 0 auto;
  border-collapse: collapse;
  box-shadow: 6px -6px 30px;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
- /*border-left: 3px solid black;*/
 }
 .sir {
  background-color: lightgrey;
@@ -89,37 +94,15 @@ td {
  color: black;
 }
 article {
- height: 200px;
- width: 800px;
  margin: 80px 10% 0; 
+ height: 200px;
 }
 footer {
  clear: both;
  text-align: center;
  margin-top: 40px;
 }
-.input {
- width: 50%;
- height: 30px;
- text-align: center;
-}
-.send {
- width: 20%;
- height: 30;
-}
-.buttom:hover {
- text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
- cursor: pointer;
- color: blue;
-}
-textarea {
- height: 70px;
- width: 50%
-}
-input, textarea {
- border-radius: 10px;
- background-color: lightgrey;
-}
+
 ol {
  list-style-type: none;
 }
@@ -136,17 +119,15 @@ ol li a:hover {
  height: 100px;
  text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
 }
-.mova {
- position: fixed;
- top: 40px;
- left: 20px;
+div {
+float: left;
 }
 .mova ul {
  list-style-type: none;
 }
 .mova ul li {
  display: inline-block;
- padding-right: 50px;
+ /*padding-right: 50px;*/
 }
 .mova ul li a {
  text-decoration: none;
@@ -156,7 +137,7 @@ ol li a:hover {
  transition: .3s;
 }
 .mova ul li a:hover {
- color: blue;
+ color: lightblue;
  cursor: pointer;
 }
 span {
