--- a/css/page4.css
+++ b/css/page4.css
@@ -19,22 +19,23 @@ h2 {
  font-family: Italic;
  font-size: 2em;
  text-align: center;
+ padding-top: 30px;
 }
 nav {
  position: fixed;
- top: 40px;
- right: 20px;
+ top: 20px;
+ left: 20px;
+ padding-top: 20px;
 }
 ul {
  list-style-type: none;
  color: white;
- width: 175px;
- text-align: center;
 }
 ul li {
  font-size: large;
- padding: 20px 0;
- text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
+ padding-right: 30px;
+ text-shadow: 1px 1px 3px grey, 0 0 1em #4b59a8;
+ display: inline-block;
 }
 ul li .jakir {
  text-decoration: none;
@@ -44,7 +45,7 @@ ul li .jakir {
  transition: .3s;
 }
 .jakir:hover {
- color: blue;
+ color: lightblue;
  cursor: pointer;
 }
 .input {
@@ -87,4 +88,7 @@ ol li a:hover {
 }
 .message {
  padding-top: 100px;
+}
+header {
+ height: 100px;
 }
