--- a/css/page2.css
+++ b/css/page2.css
@@ -13,26 +13,25 @@ body {
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-attachment: fixed;
+ max-width: 1500px;
+ margin: 0 auto;
 }
 h2 {
  font-family: Italic;
  font-size: 2em;
- text-align: center;
-}
-nav {
- position: fixed;
- top: 20px;
- left: 20px;
- padding-top: 20px;
 }
 ul {
  list-style-type: none;
  color: white;
+ padding-top: 40px;
+ padding-left: 20px;
+ text-align: left;
+ float: left;
 }
 ul li {
  font-size: large;
  padding-right: 30px;
- text-shadow: 1px 1px 3px grey, 0 0 1em #4b59a8;
+ text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
  display: inline-block;
 }
 ul li .jakir {
@@ -48,8 +47,11 @@ ul li .jakir {
 }
 ol {
  list-style-type: none;
+ float: right;
 }
 ol li {
+ padding-top: 30px;
+ padding-right: 20px;
  display: inline-block;
 }
 ol li a {
@@ -62,27 +64,67 @@ ol li a:hover {
  height: 100px;
  text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
 }
+.sprite {
+ width: 30px;
+ height: 30px;
+}
 #education {
- clear: left;
  float: left;
- width: 30%;
- margin-left: 5%;
+ width: 250px;
+ margin-left: 25%;
+ text-align: right;
+}
+#work {
+ width: 250px;
+ float: right;
+ margin-right: 30%;
+ text-align: left;
 }
 p {
  margin-top: 20px;
- text-align: center;
-}
-#work {
- width: 30%;
- float: right;
- margin-right: 15%;
 }
 section {
- margin-top: 100px;
+ margin-top: 80px;
 }
 article {
  height: 500px;
+ position: relative;
 }
 header {
- height: 100px;
+ height: 70px;
+}
+#osvita {
+ position: absolute;
+ height: 200px;
+ width: 250px;
+ left: 30px;
+ top: 50px;
+ border: 3px solid white;
+}
+#bike {
+ position: absolute;
+ height: 200px;
+ width: 200px;
+ top: 180px;
+ right: 200px;
+ z-index: 2;
+ border: 3px solid white;
+ 
+}
+#dance {
+ position: absolute;
+ height: 200px;
+ width: 250px;
+ top: 50px;
+ right: 30px;
+ border: 3px solid white;
+}
+#buka {
+ position: absolute;
+ height: 200px;
+ width: 200px;
+ right: 40px;
+ top: 280px;
+ z-index: 3;
+ border: 3px solid white;
 }
