--- a/css/page4.css
+++ b/css/page4.css
@@ -14,27 +14,27 @@ body {
  background-size: 100% 100%;
  background-attachment: fixed;
  text-align: center;
+ max-width: 1500px;
+ margin: 0 auto;
 }
 h2 {
  font-family: Italic;
  font-size: 2em;
  text-align: center;
- padding-top: 30px;
-}
-nav {
- position: fixed;
- top: 20px;
- left: 20px;
- padding-top: 20px;
+ padding-bottom: 20px;
 }
 ul {
  list-style-type: none;
  color: white;
+ padding-top: 40px;
+ padding-left: 20px;
+ text-align: left;
+ float: left;
 }
 ul li {
  font-size: large;
  padding-right: 30px;
- text-shadow: 1px 1px 3px grey, 0 0 1em #4b59a8;
+ text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
  display: inline-block;
 }
 ul li .jakir {
@@ -72,8 +72,11 @@ input, textarea {
 }
 ol {
  list-style-type: none;
+ float: right;
 }
 ol li {
+ padding-top: 30px;
+ padding-right: 20px;
  display: inline-block;
 }
 ol li a {
@@ -86,9 +89,13 @@ ol li a:hover {
  height: 100px;
  text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
 }
+.sprite {
+ width: 30px;
+ height: 30px;
+}
 .message {
- padding-top: 100px;
+ padding-top: 80px;
 }
 header {
- height: 100px;
+ height: 70px;
 }
