--- a/css/page2.css
+++ b/css/page2.css
@@ -4,8 +4,8 @@
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
+ font-family: 'Indie Flower', cursive;
 }
 body {
  color: white;
