--- a/css/page3.css
+++ b/css/page3.css
@@ -4,8 +4,8 @@
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
+ font-family: 'Indie Flower', cursive;
 }
 body {
  color: white;
@@ -78,5 +78,9 @@ header {
  width: 250px;
  margin-left: 30px;
  border: 3px solid white;
+ float: left;
 }
- 
+p {
+ max-width: 500px;
+ margin-left: 400px;
+}
