--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
+ font-family: 'Indie Flower', cursive;
 }
 body {
  color: white;
@@ -22,12 +22,13 @@ body {
  width: 150px;
  height: 200px;
  float: left;
- /*border: 2px solid darkgrey;*/
- border-radius: 10px;
- filter: grayscale(50%);
- -webkit-filter: grayscale(75%);
- -moz-filter: grayscale(75%);
- -ms-filter: grayscale(75%);
+ border: 3px solid white;
+ margin-top: 40px;
+ /*border-radius: 10px;*/
+ /*filter: grayscale(50%);*/
+ /*-webkit-filter: grayscale(75%);*/
+ /*-moz-filter: grayscale(75%);*/
+ /*-ms-filter: grayscale(75%);*/
 }
 h1 {
  margin: 0 auto;
@@ -86,9 +87,12 @@ td {
 .black {
  color: black;
 }
+.fon {
+ background-color: #121212;
+}
 article {
  margin: 80px 10% 0; 
- height: 300px;
+ height: 400px;
 }
 footer {
  clear: both;
@@ -108,12 +112,6 @@ ol li a {
  padding-left: 20px;
  text-decoration: none;
 }
-ol li a:hover {
- cursor: pointer;
- width: 100px;
- height: 100px;
- text-shadow: 3px 3px 6px black, 0 0 1em #4b59a8;
-}
 div {
 float: left;
 }
@@ -125,15 +123,11 @@ form {
 }
 header {
  height: 70px;
- background-image: url("../foto/nav_back.jpg");
+ /*background-image: url("../foto/nav_back.jpg");*/
 }
 .sprite {
  width: 30px;
  height: 30px;
-}
-li .sprite:hover {
- width: 35px;
- height: 35px;
 }
 footer {
  position: relative;
