--- a/css/page3.css
+++ b/css/page3.css
@@ -9,7 +9,7 @@
 }
 body {
  color: white;
- background-image: url("../foto/background.jpg");
+ background-image: url("../css/b.jpg");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-attachment: fixed;
