--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 body {
  color: white;
- background-image: url("../foto/background.jpg");
+ background-image: url("../css/b.jpg");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-attachment: fixed;
@@ -24,11 +24,6 @@ body {
  float: left;
  border: 3px solid white;
  margin-top: 40px;
- /*border-radius: 10px;*/
- /*filter: grayscale(50%);*/
- /*-webkit-filter: grayscale(75%);*/
- /*-moz-filter: grayscale(75%);*/
- /*-ms-filter: grayscale(75%);*/
 }
 h1 {
  margin: 0 auto;
@@ -123,7 +118,6 @@ form {
 }
 header {
  height: 70px;
- /*background-image: url("../foto/nav_back.jpg");*/
 }
 .sprite {
  width: 30px;
